Presentation layer, controller e model do DietaryRestriction e alterações ao BO.

--- a/Lennyouse/WebApi/Views/Home/Index.cshtml
+++ b/Lennyouse/WebApi/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    //var lst = Model as List<Recodme.RD.Lennyouse.PresentationLayer.WebApi.Models.DietaryRestrictionViewModel>;
 }
 
 <div class="text-center">
