--- a/Lennyouse/WebApi/Views/_ViewImports.cshtml
+++ b/Lennyouse/WebApi/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WebApi
-@using WebApi.Models
+﻿@using  Recodme.RD.Lennyouse.PresentationLayer.WebApi
+@using  Recodme.RD.Lennyouse.PresentationLayer.WebApi.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
