Added views and Razor

--- a/Lennyouse/WebApi/Views/Home/Index.cshtml
+++ b/Lennyouse/WebApi/Views/Home/Index.cshtml
@@ -1,9 +1,45 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-    //var lst = Model as List<Recodme.RD.Lennyouse.PresentationLayer.WebApi.Models.DietaryRestrictionViewModel>;
+﻿@*@{
+        ViewData["Title"] = "Home Page";
+        //var lst = Model as List<Recodme.RD.Lennyouse.PresentationLayer.WebApi.Models.DietaryRestrictionViewModel>;
+    }
+
+    <div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>*@
+
+<p>
+    Olá
+    @{
+        string SayHello(string name)
+        {
+            return $"Hello {name}";
+        }
+    <p>
+        @SayHello("pessoal")
+    </p>
+    }
+    </p>
+
+    <p>
+        @DateTime.Now;
+    </p>
+
+    @{
+        var name = "Nome";
+        var message = "Olá";
+    }
+
+<p>@message @name</p>
+
+@{ 
+    var otherName = "OutroNome";
+    var otherMessage = "Adeus";
+    <p><span class="font-italic">"@message @name"</span> <span>- @otherMessage @otherName</span></p>
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@*Comment**@
+
+@@brake
+
+<p>1 + 3 = @(1+3)</p> 
